refactor(contas): Padroniza criação de contas e melhora usabilidade com CPFs
Este commit refatora a camada de serviço e DTOs para padronizar a lógica de criação de todas as contas (Corrente, Poupança, Jovem e Global). As principais mudanças incluem:

- **Migração para CPF**: A lógica de busca de clientes nos métodos de criação de conta foi alterada para utilizar o CPF (`List<String> titularCpfs`) em vez do ID (`List<Long> titularIds`). Isso melhora a usabilidade da API, tornando-a mais intuitiva para o usuário (gerente) e eliminando a necessidade de expor IDs internos.

- **Geração Automática de Dados**: A geração automática de número de conta, segmento de cliente, taxa de manutenção e limite de cheque especial (para contas-corrente) foi estendida para todos os tipos de conta. Isso centraliza a lógica de negócio e previne erros de dados nulos.

- **DTOs Consistentes**: Os DTOs de requisição e resposta foram atualizados para refletir a nova lógica de dados de negócio. Agora, todos os DTOs de criação de conta aceitam CPFs, e os DTOs de resposta retornam os CPFs dos titulares.

- **Correções de Bugs**: Corrigida a lógica dos métodos de busca de conta, que antes lançavam uma exceção desnecessária após o sucesso do mapeamento. Além disso, a lógica de saque e depósito agora usa DTOs específicos, tornando a API de transações mais robusta.

Essas alterações garantem que o sistema seja mais coeso, seguro e escalável.