@@ -14,6 +14,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.time.LocalDate;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -29,18 +31,34 @@ public class ContaService {
     // Cria uma conta poupança
     @Transactional
     public ContaCorrenteResponse criarContaCorrente(ContaCorrenteRequest request) {
-        List<Cliente> titulares = clienteRepository.findAllById(request.titularIds());
-        if (titulares.size() != request.titularIds().size()) {
-            throw new IllegalArgumentException("Um ou mais IDs de clientes são inválidos");
-        }
+        // Busca os clientes pelo CPF
+        List<Cliente> titulares = request.titularCpfs().stream()
+                .map(cpf -> clienteRepository.findByCpf(cpf)
+                        .orElseThrow(() -> new RecursoNaoEncontrado("Cliente não encontrado para o CPF: " + cpf)))
+                .toList();
+
+        Cliente titularPrincipal = titulares.getFirst();
+        SegmentoCliente segmento = definirSegmentoCliente(titularPrincipal.getSalarioMensal(), titularPrincipal.getPatrimonioEstimado());
+        BigDecimal taxaManutencao = definirTaxaManutencao(segmento);
+        BigDecimal limiteChequeEspecial = definirLimiteChequeEspecial(
+                titularPrincipal.getSalarioMensal(),
+                titularPrincipal.getPossuiRestricoesBancarias()
+        );
+
+        // 2. Cria a conta-corrente
         ContaCorrente contaCorrente = new ContaCorrente();
-        contaCorrente.setNumeroConta(request.numeroConta());
-        contaCorrente.setSaldo(BigDecimal.ZERO);
+        contaCorrente.setNumeroConta(gerarNumeroContaUnico());
         contaCorrente.setAgencia(request.agencia());
-        contaCorrente.setLimiteChequeEspecial(request.limiteChequeEspecial());
+        contaCorrente.setSaldo(BigDecimal.ZERO);
+        contaCorrente.setSenha(request.senha());
+        contaCorrente.setLimiteChequeEspecial(limiteChequeEspecial);
         contaCorrente.setTitulares(new HashSet<>(titulares));
         contaCorrente.setStatusConta(StatusConta.ATIVA);
+        contaCorrente.setDataAbertura(LocalDate.now());
+        contaCorrente.setSegmentoCliente(segmento);
+        contaCorrente.setTaxaManutencao(taxaManutencao);
         contaRepository.save(contaCorrente);
+
         return maptoContaCorrenteResponse(contaCorrente);
     }
 
@@ -51,9 +69,9 @@ public class ContaService {
         List<Cliente> titulares = request.titularCpfs().stream()
                 .map(cpf -> clienteRepository.findByCpf(cpf)
                         .orElseThrow(() -> new RecursoNaoEncontrado("Cliente não encontrado para o CPF: " + cpf)))
-                .collect(Collectors.toList());
+                .toList();
 
-        Cliente titularPrincipal = titulares.get(0);
+        Cliente titularPrincipal = titulares.getFirst();
         SegmentoCliente segmento = definirSegmentoCliente(titularPrincipal.getSalarioMensal(), titularPrincipal.getPatrimonioEstimado());
         BigDecimal taxaManutencao = definirTaxaManutencao(segmento);
 
@@ -76,48 +94,71 @@ public class ContaService {
     // Cria uma conta jovem
     @Transactional
     public ContaJovemResponse criarContaJovem(ContaJovemRequest request) {
-        Conta responsavel = contaRepository.findById(request.responsavelId())
-                .orElseThrow(() -> new IllegalArgumentException("Cliente responsável não encontrada"));
+        // 1. Busca os clientes pelo CPF
+        List<Cliente> titulares = request.titularCpfs().stream()
+                .map(cpf -> clienteRepository.findByCpf(cpf)
+                        .orElseThrow(() -> new RecursoNaoEncontrado("Cliente titular não encontrado para o CPF: " + cpf)))
+                .toList();
 
-        Set<Cliente> titulares = new HashSet<>(clienteRepository.findAllById(request.titularIds()));
-        if (titulares.isEmpty()) {
-            throw new IllegalArgumentException("Nenhum cliente titular encontrado");
-        }
+        // 2. Busca o cliente responsável (ainda pelo ID, se o DTO não mudar)
+        Conta responsavel = contaRepository.findById(request.responsavelId())
+                .orElseThrow(() -> new RecursoNaoEncontrado("Conta do responsável não encontrada."));
+
+        Cliente titularPrincipal = titulares.getFirst();
+        SegmentoCliente segmento = definirSegmentoCliente(titularPrincipal.getSalarioMensal(), titularPrincipal.getPatrimonioEstimado());
+        BigDecimal taxaManutencao = definirTaxaManutencao(segmento);
+
+        // 3. Cria e configura a Conta Jovem
         ContaJovem contaJovem = new ContaJovem();
-        contaJovem.setNumeroConta(request.numeroConta());
+        contaJovem.setNumeroConta(gerarNumeroContaUnico());
         contaJovem.setSaldo(BigDecimal.ZERO);
         contaJovem.setAgencia(request.agencia());
+        contaJovem.setSenha(request.senha());
         contaJovem.setResponsavelId(responsavel);
-        contaJovem.setTitulares(titulares);
+        contaJovem.setTitulares(new HashSet<>(titulares));
         contaJovem.setStatusConta(StatusConta.ATIVA);
+        contaJovem.setDataAbertura(LocalDate.now());
+        contaJovem.setSegmentoCliente(segmento);
+        contaJovem.setTaxaManutencao(taxaManutencao);
         contaRepository.save(contaJovem);
+
         return maptoContaJovemResponse(contaJovem);
     }
 
     // Cria a conta global
     @Transactional
     public ContaGlobalResponse criarContaGlobal(ContaGlobalRequest request) {
+        // 1. Busca os clientes pelo CPF
+        List<Cliente> titulares = request.titularCpfs().stream()
+                .map(cpf -> clienteRepository.findByCpf(cpf)
+                        .orElseThrow(() -> new RecursoNaoEncontrado("Cliente não encontrado para o CPF: " + cpf)))
+                .toList();
 
-        List<Cliente> titulares = clienteRepository.findAllById(request.titularIds());
-        if (titulares.size() != request.titularIds().size()) {
-            throw new RecursoNaoEncontrado("Um ou mais IDs de clientes são inválidos");
-        }
+        Cliente titularPrincipal = titulares.getFirst();
+        SegmentoCliente segmento = definirSegmentoCliente(titularPrincipal.getSalarioMensal(), titularPrincipal.getPatrimonioEstimado());
+        BigDecimal taxaManutencao = definirTaxaManutencao(segmento);
+
+        // 2. Cria e configura a Conta Global
         ContaGlobal contaGlobal = new ContaGlobal();
-        contaGlobal.setNumeroConta(request.numeroConta());
+        contaGlobal.setNumeroConta(gerarNumeroContaUnico());
         contaGlobal.setSaldo(BigDecimal.ZERO);
         contaGlobal.setSaldoDolar(BigDecimal.ZERO);
-        contaGlobal.setCodigoSwift("AGIBRSP201");
         contaGlobal.setAgencia(request.agencia());
+        contaGlobal.setCodigoSwift("AGIBRSP" + contaGlobal.getAgencia());
+        contaGlobal.setSenha(request.senha());
         contaGlobal.setTitulares(new HashSet<>(titulares));
         contaGlobal.setStatusConta(StatusConta.ATIVA);
+        contaGlobal.setDataAbertura(LocalDate.now());
+        contaGlobal.setSegmentoCliente(segmento);
+        contaGlobal.setTaxaManutencao(taxaManutencao);
         contaRepository.save(contaGlobal);
+
         return maptoContaGlobalResponse(contaGlobal);
     }
 
     // Desativa a conta impedindo que a mesma realize transações, porém ainda estando presente no banco de dados como forma de consulta
     @Transactional
     public void desativarConta(Long Id) {
-
         Conta conta = contaRepository.findById(Id)
                 .orElseThrow(() -> new RecursoNaoEncontrado("Conta não encontrada"));
         if (conta.getSaldo().compareTo(BigDecimal.ZERO) != 0) {
@@ -128,27 +169,17 @@ public class ContaService {
     }
 
     @Transactional(readOnly = true)
-    public void buscarContaPorId(Long contaId) {
+    public Object buscarDetalhesContaPorId(Long contaId) {
         Conta conta = contaRepository.findById(contaId)
-                .orElseThrow(() -> new RecursoNaoEncontrado("Conta não encontrada"));
+                .orElseThrow(() -> new RecursoNaoEncontrado("Conta não encontrada com ID: " + contaId));
+        return mapearContaParaResponse(conta);
     }
 
     @Transactional(readOnly = true)
     public Object buscarDetalhesContaPorNumero(String numeroConta) {
         Conta conta = contaRepository.findByNumeroConta(numeroConta)
                 .orElseThrow(() -> new RecursoNaoEncontrado("Conta não encontrada com número: " + numeroConta));
-
-        if (conta instanceof ContaCorrente cc) {
-            return maptoContaCorrenteResponse(cc);
-        } else if (conta instanceof ContaPoupanca pp) {
-            return maptoContaPoupancaResponse(pp);
-        } else if (conta instanceof ContaJovem cj) {
-            return maptoContaJovemResponse(cj);
-        } else if (conta instanceof ContaGlobal cg) {
-            return maptoContaGlobalResponse(cg);
-        }
-
-        throw new RecursoNaoEncontrado("Tipo de conta desconhecido para o número: " + numeroConta);
+        return mapearContaParaResponse(conta);
     }
 
     @Transactional
@@ -171,6 +202,7 @@ public class ContaService {
         } while (contaRepository.findByNumeroConta(numeroContaGerado).isPresent());
         return numeroContaGerado;
     }
+
 
     private SegmentoCliente definirSegmentoCliente(BigDecimal rendaMensal, BigDecimal patrimonio) {
         if (rendaMensal != null && rendaMensal.compareTo(new BigDecimal("10000")) > 0 ||
@@ -197,9 +229,52 @@ public class ContaService {
         }
     }
 
+    private BigDecimal definirLimiteChequeEspecial(BigDecimal salarioMensal, Boolean possuiRestricoes) {
+        if (possuiRestricoes != null && possuiRestricoes) {
+            return BigDecimal.ZERO;
+        }
+
+        if (salarioMensal != null && salarioMensal.compareTo(BigDecimal.ZERO) > 0) {
+            // Calcula 20% da renda: renda * 0.20
+            BigDecimal limite = salarioMensal.multiply(new BigDecimal("0.20"));
+            return limite.setScale(2, RoundingMode.HALF_UP); // Arredonda para 2 casas decimais
+        }
+
+        return BigDecimal.ZERO; // Caso a renda seja nula ou zero
+    }
+
+    // Descobre o tipo da conta através do discriminator value
+    private static String getTipoConta(Conta conta) {
+        DiscriminatorValue discriminatorValue = conta.getClass().getAnnotation(DiscriminatorValue.class);
+        if (discriminatorValue != null) {
+            return discriminatorValue.value();
+        } else {
+            return "Tipo desconhecido";
+        }
+    }
+
+    @Transactional(readOnly = true)
+    public List<Conta> listarTodasContas() {
+        return contaRepository.findAll();
+    }
+
+    // Metodo genérico para mapear qualquer tipo de conta para seu DTO
+    public Object mapearContaParaResponse(Conta conta) {
+        if (conta instanceof ContaCorrente cc) {
+            return maptoContaCorrenteResponse(cc);
+        } else if (conta instanceof ContaPoupanca cp) {
+            return maptoContaPoupancaResponse(cp);
+        } else if (conta instanceof ContaJovem cj) {
+            return maptoContaJovemResponse(cj);
+        } else if (conta instanceof ContaGlobal cg) {
+            return maptoContaGlobalResponse(cg);
+        }
+        return null;
+    }
+
     public ContaCorrenteResponse maptoContaCorrenteResponse(ContaCorrente conta) {
-        Set<Long> titularIds = conta.getTitulares().stream()
-                .map(Cliente::getId)
+        Set<String> titularCpfs = conta.getTitulares().stream()
+                .map(Cliente::getCpf)
                 .collect(Collectors.toSet());
         return new ContaCorrenteResponse(
                 conta.getId(),
@@ -207,7 +282,7 @@ public class ContaService {
                 conta.getAgencia(),
                 conta.getSaldo(),
                 conta.getLimiteChequeEspecial(),
-                titularIds,
+                titularCpfs,
                 conta.getStatusConta(),
                 getTipoConta(conta));
     }
@@ -232,8 +307,8 @@ public class ContaService {
 
     // Tem a função de mapear os campos da entidade conta jovem para o seu respectivo DTO de resposta
     public ContaJovemResponse maptoContaJovemResponse(ContaJovem conta) {
-        Set<Long> titularIds = conta.getTitulares().stream()
-                .map(Cliente::getId)
+        Set<String> titularCpfs = conta.getTitulares().stream()
+                .map(Cliente::getCpf)
                 .collect(Collectors.toSet());
         return new ContaJovemResponse(
                 conta.getId(),
@@ -241,15 +316,15 @@ public class ContaService {
                 conta.getAgencia(),
                 conta.getSaldo(),
                 conta.getResponsavelId().getId(),
-                titularIds,
+                titularCpfs,
                 conta.getStatusConta(),
                 getTipoConta(conta));
     }
 
     // Tem a função de mapear os campos da entidade conta global para o seu respectivo DTO de resposta
     public ContaGlobalResponse maptoContaGlobalResponse(ContaGlobal conta) {
-        Set<Long> titularIds = conta.getTitulares().stream()
-                .map(Cliente::getId)
+        Set<String> titularCpfs = conta.getTitulares().stream()
+                .map(Cliente::getCpf)
                 .collect(Collectors.toSet());
         return new ContaGlobalResponse(
                 conta.getId(),
@@ -258,33 +333,8 @@ public class ContaService {
                 conta.getSaldo(),
                 conta.getSaldoDolar(),
                 conta.getCodigoSwift(),
-                titularIds,
+                titularCpfs,
                 conta.getStatusConta(),
                 getTipoConta(conta));
-
-    }
-
-    // Tem a função de buscar os detalhes de uma conta específica
-    public Object buscarDetalhesConta(Long contaId) {
-        Conta conta = contaRepository.findById(contaId)
-                .orElseThrow(() -> new RecursoNaoEncontrado("Conta não encontrada com ID: " + contaId));
-        if (conta instanceof ContaCorrente cc) {
-            return maptoContaCorrenteResponse(cc);
-        } else if (conta instanceof ContaPoupanca pp) {
-            return maptoContaPoupancaResponse(pp);
-        } else if (conta instanceof ContaJovem cj) {
-            return maptoContaJovemResponse(cj);
-        }
-        throw new RecursoNaoEncontrado("Tipo de conta desconhecido para ID: " + contaId);
-    }
-
-    // Descobre o tipo da conta através do discriminator value
-    private static String getTipoConta(Conta conta) {
-        DiscriminatorValue discriminatorValue = conta.getClass().getAnnotation(DiscriminatorValue.class);
-        if (discriminatorValue != null) {
-            return discriminatorValue.value();
-        } else {
-            return "Tipo desconhecido";
-        }
     }
 }
